(*) code style enhancements